// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Summary with 1 expense correctly 1`] = `
<div>
  <h1>
    Expenses Summary
  </h1>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    USD$1.23 
  </p>
</div>
`;

exports[`should render Summary with multiple expenses correctly 1`] = `
<div>
  <h1>
    Expenses Summary
  </h1>
  <p>
    Viewing 
    10
     
    expenses
     totalling 
    USD$1,231.23 
  </p>
</div>
`;

exports[`should render Summary with no expenses correctly 1`] = `
<div>
  <h1>
    Expenses Summary
  </h1>
  <p>
    No summary
  </p>
</div>
`;
